--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,10 @@
 @font-face {
     font-family: 'Fontspring-DEMO-integralcf-bold';
-    src: url('fonts/Fontspring-DEMO-integralcf-bold.otf') format('opentype');
+    src: url('./fonts/Fontspring-DEMO-integralcf-bold.otf') format('opentype'),
+         url('../fonts/Fontspring-DEMO-integralcf-bold.otf') format('opentype');
     font-weight: normal;
     font-style: normal;
+    font-display: swap; /* This helps with font loading */
 }
 /* root */
 :root{
